[fix]getFirstメソッド呼び出し前にリストのサイズチェックを追加
・StudentControllerクラスのregisterStudentメソッドでgetFirstを呼び出す前に、studentCoursesリストのサイズチェックを実装しました
・nullや空のリストだった場合にはエラーレスポンスを返します